fixed gap and banner

--- a/src/assets/scss/sections.scss
+++ b/src/assets/scss/sections.scss
@@ -1,8 +1,10 @@
+$gap-size: 1.5rem;
+
 .section {
     position: relative;
-    margin: 1.5rem auto;
+    margin: $gap-size auto;
     @media screen and (min-width: 769px) {
-        margin: 3rem auto;
+        margin: calc(#{$gap-size} * 2) auto;
     }
 }
 // Hero
@@ -81,10 +83,11 @@
 }
 
 .is-overlapped {
+    margin-top: calc(#{$gap-size} * -1);
     @media screen and (min-width: 769px) {
         position: relative;
         z-index: 1;
-        margin-top: -4rem;
+        margin-top: calc(#{$gap-size} * -2.5);
         background-color: $white;
         box-shadow: 0px 10px 50px $primary-dark;
     }
